Minor style overhaul, fix cv sections overflow clipping

--- a/www/src/card.css
+++ b/www/src/card.css
@@ -17,8 +17,8 @@
    margin-top: 7px;
    position: relative;
    flex-direction: column;
-  }
-  
+}
+
 .card-container.animated-appear {
     animation: anim-card 0.9s cubic-bezier(0.425, 1.14, 0.47, 1.125) forwards;
 }
@@ -59,7 +59,7 @@
   /* color: var(--color-font-title-light); */
   width: 95%;
   position: relative;
-  margin-top: 10px;
+  margin-top: 0.25em;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -72,7 +72,7 @@
 .badgescard .expand-button {
   display: block;
   width: 100%;
-  padding: 4px 0px;
+  padding: 2px 0px;
   border: none;
   margin-top: 0;
   text-align: center;
