--- a/www/src/common.css
+++ b/www/src/common.css
@@ -2,7 +2,7 @@
    --canvas-min-width: 300px;
    --canvas-min-aspect: 1.0;
    --sidebar-width: 27em;
-   --font-size-main: 14pt;
+   --font-size-main: 13pt;
    --font-size-h2: 1.2rem;
    /* --color-theme-accent: #ffd966; */
    /* --color-theme-normal: #ffec63; */
@@ -159,7 +159,6 @@ a:active, a:visited, a:link {
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: center;
 }
 
 .flex-center {
