--- a/www/src/cv.css
+++ b/www/src/cv.css
@@ -22,7 +22,7 @@
 }
 
 .cv-chapter .expand-button {
-   padding: 4px 0px;
+   padding: 2px 0px;
    /* overflow: hidden; */
    width: 100%;
 }
